[gd_scene load_steps=40 format=2]

[ext_resource path="res://scripts/character/fidji.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/Fidji/Idle/Fidji-singe-dos.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/Fidji/Idle/Fidji-singe.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Fidji/Idle/fidji-côté-g.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Characters/Fidji/Idle/fidji-côté-droit.png" type="Texture" id=5]
[ext_resource path="res://animation/Fidji.tres" type="Animation" id=6]
[ext_resource path="res://Sprites/Characters/Fidji/Run/Fidji-singe-run-f.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Characters/Fidji/Run/Fidji-singe-run-b.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Characters/Fidji/Run/fidji-côté-d-f.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Characters/Fidji/Run/fidji-côté-d-b.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Characters/Fidji/Run/fidji-côté-droit-run-front.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Characters/Fidji/Run/fidji-côté-droit-run-back.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Characters/Fidji/Run/Fidji-singe-dos-run-f.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Characters/Fidji/Run/Fidji-singe-dos-run-b.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Multiplayer/blue-arrow-r.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Multiplayer/blue-arrow.png" type="Texture" id=16]
[ext_resource path="res://scenes/characters/Camera2D.gd" type="Script" id=17]
[ext_resource path="res://Sprites/overlay/bonus-item-empty.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "idle_back"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_front"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_front"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "run_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "shoot"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_canShoot"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_back"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle_front"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle_right"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "run_back"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "run_front"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "run_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "run_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "shoot"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_canShoot"
} ]
}

[sub_resource type="Animation" id=18]
resource_name = "BananaDrunk"
length = 15.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1.75 ],
"method": "speed_boost"
}, {
"args": [ 1.0 ],
"method": "speed_boost"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_canUsePowerUp"
}, {
"args": [ true ],
"method": "set_canUsePowerUp"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("overlay/ProgressBar:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 14.9, 15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0, 100.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("overlay/ProgressBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 14.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "RespawnPlayer"
length = 4.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "preventRespawnPlayer"
} ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 7.5, 13 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_back = SubResource( 1 )
anims/idle_front = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/run_back = ExtResource( 6 )
anims/run_front = SubResource( 5 )
anims/run_left = SubResource( 6 )
anims/run_right = SubResource( 7 )
anims/shoot = SubResource( 8 )

[node name="AnimationWeapons" type="AnimationPlayer" parent="."]
anims/idle_back = SubResource( 9 )
anims/idle_front = SubResource( 10 )
anims/idle_left = SubResource( 11 )
anims/idle_right = SubResource( 12 )
anims/run_back = SubResource( 13 )
anims/run_front = SubResource( 14 )
anims/run_left = SubResource( 15 )
anims/run_right = SubResource( 16 )
anims/shoot = SubResource( 17 )

[node name="PowerUpCoolDown" type="AnimationPlayer" parent="."]
anims/BananaDrunk = SubResource( 18 )

[node name="deathHandler" type="AnimationPlayer" parent="."]
anims/RespawnPlayer = SubResource( 21 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 20 )

[node name="upper_arrow" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 15 )

[node name="downside_arrow" type="Sprite" parent="."]
position = Vector2( 0, 22 )
texture = ExtResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 17 )

[node name="overlay" type="Control" parent="."]
visible = false
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0

[node name="powerUp" type="TextureRect" parent="overlay"]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 18 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="overlay"]
visible = false
modulate = Color( 0.431373, 1, 0, 1 )
self_modulate = Color( 0.27451, 1, 0.266667, 1 )
margin_left = 13.0
margin_top = 50.0
margin_right = 51.0
margin_bottom = 61.0
value = 100.0
rounded = true
percent_visible = false

[node name="killFeed" type="RichTextLabel" parent="overlay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.0
margin_top = 10.0
margin_bottom = 25.0
bbcode_enabled = true
scroll_active = false

